# data-etl

./: .env.example  .gitignore  FUNCTION_DOCUMENTATION.md  README.md  pnpm-lock.yaml  tsconfig.tsbuildinfo
.kiro/specs/fastapi-langgraph-migration/: .config.kiro  design.md  requirements.md  tasks.md
server/: appDb.js  server.js
server_py/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  test_config.py
server_py/db/: connection.py  operations.py
server_py/graphs/: etl_chat_graph.py  metric_chat_graph.py
server_py/llm/: client.py  intent.py  tools.py
server_py/routers/: chat.py  debug.py  dml.py  lineage.py  mapping.py  metric.py  metric_chat.py  tables.py
server_py/utils/: formatters.py  sql_parser.py
src/: App.tsx  api.ts  dashboardStore.ts  metricChatStore.ts  metricDefStore.ts  metricStore.ts  processedTableStore.ts  schemaStore.ts  store.ts
src/components/: AddMetricModal.tsx  LineageModal.tsx  SchemaTree.tsx  Workspace.tsx
