[project]
name = "server-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
